@@ -107,8 +107,10 @@ import java.util.*;
  *
  *
  * @see <a href="http://www.w3.org/TR/xmlschema-2/#dateTime">XML schema part 2</a>
- * @deprecated {@link TrieDateField} is recomended for all new schemas
+ *
+ * @deprecated this class will be removed in 5.0 - use {@link TrieDateField} instead
  */
+@Deprecated
 public class DateField extends PrimitiveFieldType implements DateValueFieldType {
 
   public static TimeZone UTC = TimeZone.getTimeZone("UTC");
